layout bugfix

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -9,8 +9,8 @@
   font-family: 'Inter';
   font-style: normal;
   background-color: white;
-  display: flex;
-  align-items: center;
+  /* display: flex; */
+  /* align-items: center; */
   flex-direction: column;
   margin: 0 auto;
 }
