--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,6 +5,7 @@
   width: 100%;
   height: 74px;
   align-items: center;
+  margin: 0 auto;
 }
 
 @media screen and (max-width: 1215px) {
