--- a/src/components/Movies/MoviesCard/MoviesCard.css
+++ b/src/components/Movies/MoviesCard/MoviesCard.css
@@ -46,8 +46,10 @@
 
 .movie__img {
     max-width: 364px;
+    width: 100%;
     max-height: 203px;
-    object-fit: contain;
+    height: 100%;
+    object-fit: cover;
 }
 
 @media screen and (max-width: 360px) {
