--- a/src/components/Movies/MoviesCardList/MoviesCardList.css
+++ b/src/components/Movies/MoviesCardList/MoviesCardList.css
@@ -6,6 +6,7 @@
 
 .movies__list {
     display: flex;
+    margin: 0 auto;
     flex-wrap: wrap;
     column-gap: 24px;
     row-gap: 30px;
