--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -27,6 +27,10 @@
     padding-bottom: 16px;
 }
 
+.profile-form__form-wrapper:last-of-type {
+    border-bottom: none;
+}
+
 .profile-form-input__title {
     width: 140px;
     font-weight: 500;
@@ -51,4 +55,31 @@
     margin-bottom: 0;
     border-bottom: 0;
     border-bottom: 0;
+}
+
+.button-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-top: auto;
+}
+
+.form-button {
+    font-size: 12px;
+    line-height: 15px;
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    margin: 0;
+}
+
+
+.form-button_edit {
+    font-weight: 400;
+    margin-bottom: 16px;
+}
+
+.form-button_quit {
+    color: #EE3465;
+    font-weight: 500;
 }
