--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -3,7 +3,8 @@
     flex-direction: column;
     justify-content: center;
     max-width: 369px;
-    margin-top: 70px;
+    width: 100%;
+    margin: 70px auto 0 auto;
 }
 
 .entrance-form-logo {
@@ -22,7 +23,7 @@
 .form {
     display: flex;
     flex-direction: column;
-    margin: 40px 0 221px 0;
+    margin: 40px 0 0 0;
     position: relative;
 }
 
@@ -77,7 +78,7 @@
 
 
 .form__button {
-    width: 396px;
+    width: 100%;
     height: 45px;
     background-color: #2BE080;
     border: 0;
@@ -87,7 +88,7 @@
     line-height: 17px;
     text-align: center;
     color: #FFFFFF;
-    margin-bottom: 16px;
+    margin: 221px 0 16px 0;
 }
 
 .is-registered {
